fix visibility on toolbar, remove extra files

--- a/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/Toolbar.css
+++ b/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/Toolbar.css
@@ -79,15 +79,12 @@
     float:right;
 }
 
-.fr-image-menu {
-    float:left;
-}
-
-
 .fr-image-export {
   background-image:url('../../reportviewer/Images/Toolbar/export.jpg');
 }
+
 .fr-image-menu {
+  float:left;
   background-image:url('../../reportviewer/Images/Toolbar/align_just_icon.png');
 }
 
